--- a/index.html
+++ b/index.html
@@ -666,11 +666,11 @@
             </p>
 
             <div class="about__buttons">
-              <a href="https://www.github.com/" class="button">
+              <a href="https://github.com/HNSharma-07/JavaScript-Journey" class="button">
                 <i class="fa-regular fa-star"></i> Repo.
               </a>
               <a
-                href="https://www.linkedin.com/"
+                href="https://www.linkedin.com/posts/harsh-sharma-professional_harsh-sharma-activity-7157781184066789377-SCqw/"
                 target="_blank"
                 class="button__ghost"
               >
@@ -706,7 +706,7 @@
 
               <h3 class="services__title">
                 1.Fork the repository first
-                <a href="#" target="_blank"><u>Here.</u></a>
+                <a href="https://github.com/HNSharma-07/JavaScript-Journey" target="_blank"><u>Here.</u></a>
               </h3>
 
               <p class="services__description">
@@ -769,11 +769,11 @@
           </article>
         </div>
         <div class="about__buttons">
-          <a href="https://www.github.com/" class="button">
+          <a href="https://github.com/HNSharma-07/JavaScript-Journey" class="button">
             <i class="fa-regular fa-star"></i> Repo.
           </a>
           <a
-            href="https://www.linkedin.com/"
+            href="https://www.linkedin.com/posts/harsh-sharma-professional_harsh-sharma-activity-7157781184066789377-SCqw/"
             target="_blank"
             class="button__ghost"
           >
