--- a/index.html
+++ b/index.html
@@ -476,13 +476,13 @@
           <article class="projects__card">
             <div class="projects__image">
               <img
-                src="./assets/img/projects/project-n.png"
+                src="./assets/img/projects/project-9.png"
                 alt="image"
                 class="projects__img"
               />
 
               <a
-                href="https://hnsharma-07.github.io/Guess-My-Number/"
+                href="https://hnsharma-07.github.io/Calculator-App/"
                 title="Live"
                 target="_blank"
                 class="projects__button button"
@@ -493,13 +493,13 @@
 
             <div class="projects__content">
               <h3 class="projects__subtitle">09</h3>
-              <h2 class="projects__title">Title-9</h2>
-              <p class="projects__description">Description-9</p>
+              <h2 class="projects__title">Calculator App</h2>
+              <p class="projects__description">A simple Calculator App with dark mode feature.</p>
             </div>
 
             <div class="projects__buttons">
               <a
-                href="https://github.com/HNSharma-07/Guess-My-Number"
+                href="https://github.com/HNSharma-07/Calculator-App"
                 target="_blank"
                 title="Code"
                 class="projects__link"
