adding budget app project

--- a/index.html
+++ b/index.html
@@ -519,13 +519,13 @@
           <article class="projects__card">
             <div class="projects__image">
               <img
-                src="./assets/img/projects/project-n.png"
+                src="./assets/img/projects/project-10.png"
                 alt="image"
                 class="projects__img"
               />
 
               <a
-                href="https://hnsharma-07.github.io/Guess-My-Number/"
+                href="https://hnsharma-07.github.io/Budget-App/"
                 title="Live"
                 target="_blank"
                 class="projects__button button"
@@ -536,13 +536,14 @@
 
             <div class="projects__content">
               <h3 class="projects__subtitle">10</h3>
-              <h2 class="projects__title">Title-10</h2>
-              <p class="projects__description">Description-10</p>
+              <h2 class="projects__title">Budget App</h2>
+              <p class="projects__description">Expenses Tracker App made with OOP approach in JavaScript that
+                can perform CRUD operations.</p>
             </div>
 
             <div class="projects__buttons">
               <a
-                href="https://github.com/HNSharma-07/Guess-My-Number"
+                href="https://github.com/HNSharma-07/Budget-App"
                 target="_blank"
                 title="Code"
                 class="projects__link"
