blue print for project 11

--- a/index.html
+++ b/index.html
@@ -560,6 +560,49 @@
               </a>
             </div>
           </article>
+<article class="projects__card">
+            <div class="projects__image">
+              <img
+                src="./assets/img/projects/project-11.png"
+                alt="image"
+                class="projects__img"
+              />
+
+              <a
+                href="#"
+                title="Live"
+                target="_blank"
+                class="projects__button button"
+              >
+                <i class="fa-solid fa-arrow-up-right-from-square"></i>
+              </a>
+            </div>
+
+            <div class="projects__content">
+              <h3 class="projects__subtitle">11</h3>
+              <h2 class="projects__title">Image Search Engine</h2>
+              <p class="projects__description"></p>
+            </div>
+
+            <div class="projects__buttons">
+              <a
+                href="#"
+                target="_blank"
+                title="Code"
+                class="projects__link"
+              >
+                <i class="fa-brands fa-github"></i>code
+              </a>
+              <a
+                href="#"
+                target="_blank"
+                title="Account"
+                class="projects__link"
+              >
+                <i class="fa-brands fa-linkedin-in"></i>Author
+              </a>
+            </div>
+          </article>
         </div>
       </section>
 
