--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
               </a>
             </div>
           </article>
-<article class="projects__card">
+          <article class="projects__card">
             <div class="projects__image">
               <img
                 src="./assets/img/projects/project-11.png"
@@ -569,7 +569,7 @@
               />
 
               <a
-                href="#"
+                href="https://image-search-engine-injs.netlify.app/"
                 title="Live"
                 target="_blank"
                 class="projects__button button"
@@ -581,12 +581,16 @@
             <div class="projects__content">
               <h3 class="projects__subtitle">11</h3>
               <h2 class="projects__title">Image Search Engine</h2>
-              <p class="projects__description"></p>
+              <p class="projects__description">
+                Functional image gallery using Pexels API. with this, users will
+                be able to quickly search, view, download any image within
+                seconds.
+              </p>
             </div>
 
             <div class="projects__buttons">
               <a
-                href="#"
+                href="https://github.com/harshpalsinh05/Image-Search-Engine"
                 target="_blank"
                 title="Code"
                 class="projects__link"
@@ -594,7 +598,7 @@
                 <i class="fa-brands fa-github"></i>code
               </a>
               <a
-                href="#"
+                href="https://www.linkedin.com/in/harshpalsinh-r-jadeja-131036243"
                 target="_blank"
                 title="Account"
                 class="projects__link"
