project-12 card update

--- a/index.html
+++ b/index.html
@@ -607,6 +607,52 @@
               </a>
             </div>
           </article>
+          <article class="projects__card">
+            <div class="projects__image">
+              <img
+                src="./assets/img/projects/project-12.png"
+                alt="image"
+                class="projects__img"
+              />
+
+              <a
+                href="https://toast-popup.netlify.app/"
+                title="Live"
+                target="_blank"
+                class="projects__button button"
+              >
+                <i class="fa-solid fa-arrow-up-right-from-square"></i>
+              </a>
+            </div>
+
+            <div class="projects__content">
+              <h3 class="projects__subtitle">12</h3>
+              <h2 class="projects__title">Toast PopUp</h2>
+              <p class="projects__description">
+                Customized Alert box using Asynchronous JS to show error,
+                warning, info and submit message.
+              </p>
+            </div>
+
+            <div class="projects__buttons">
+              <a
+                href="https://github.com/harshpalsinh05/Toast-Popup"
+                target="_blank"
+                title="Code"
+                class="projects__link"
+              >
+                <i class="fa-brands fa-github"></i>code
+              </a>
+              <a
+                href="https://www.linkedin.com/in/harshpalsinh-r-jadeja-131036243"
+                target="_blank"
+                title="Account"
+                class="projects__link"
+              >
+                <i class="fa-brands fa-linkedin-in"></i>Author
+              </a>
+            </div>
+          </article>
         </div>
       </section>
 
