--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
               />
 
               <a
-                href="https://toast-popup.netlify.app/"
+                href="https://toast-popup-js.netlify.app/"
                 title="Live"
                 target="_blank"
                 class="projects__button button"
