--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
           <!-- Theme button -->
           <i class="ri-moon-line change-theme" id="theme-button"></i>
 
+          <a class="notes-link" href="https://github.com/HNSharma-07/JavaScript-Tutorials" title="JS Notes"><i class="ri-book-marked-fill notes-icon"></i></a>
+
           <!-- Toggle button -->
           <div class="nav__toggle" id="nav-toggle">
             <i class="ri-menu-4-line"></i>
