--- a/index.html
+++ b/index.html
@@ -757,7 +757,7 @@
             </p>
             <p class="about__description">
               <b>Future plan:</b> Add more vanilla JS <b>projects</b> and update
-              repository with my <b>JS tutorial code</b> in structured manner
+              repository with my <b><a href = "https://github.com/HNSharma-07/JavaScript-Tutorials">JS tutorial code</a></b> in structured manner
               with curated folders to master JS from scratch.
             </p>
 
