--- a/index.html
+++ b/index.html
@@ -762,8 +762,8 @@
             </p>
 
             <div class="about__buttons">
-              <a href="https://github.com/HNSharma-07/JavaScript-Journey" class="button">
-                <i class="fa-regular fa-star"></i> Repo.
+              <a href="https://github.com/HNSharma-07/JavaScript-Tutorials" class="button">
+                JS Notes
               </a>
               <a
                 href="https://www.linkedin.com/posts/harsh-sharma-professional_harsh-sharma-activity-7157781184066789377-SCqw/"
@@ -776,9 +776,9 @@
 
             <ul class="about__list">
               <li class="about__item">
-                If you're here then please show some ❤️ by ⭐ing the repo on
-                github and 👍 and 💬 the post on linkedin for better reach, I
-                would really appreciate it.
+                here you can Access JS Tutorials notes for absolute beginners.
+                Also please show some ❤️ by ⭐ing the repo and 👍 and 💬 the
+                post on linkedin for better reach, I would really appreciate it.
               </li>
             </ul>
           </div>
